--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
 spacy==3.7.2
+pt-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.7.0/pt_core_news_sm-3.7.0-py3-none-any.whl
 nltk==3.8.1
 goose3==3.1.17
 scikit-learn==1.5.2
 tk==0.1.0
 numpy==1.26.4
+
+# Novas dependências para Projeto 2
+transformers==4.40.1
+torch==2.2.2
+sentencepiece==0.2.0
+SpeechRecognition==3.10.1
+pyaudio==0.2.13 ; sys_platform == "win32"
